# backend_ai_with_procedures

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/controllers/: cient_controller.py  product_controller.py
app/core/: bootstrap.py  db.py  db_tables.sql
app/repositories/: client_repository.py  product_repository.py
app/schemas/: client_schema.py  product_schema.py  user_schema.py
app/views/: client_view.py  product_view.py
